@@ -2,6 +2,8 @@ version 1.9.4, in progress
 - Add an --accessors option to the "varlist" command, to
   expose the list of currently available accessor ("dollar")
   variables
+- Add more panel data graphing options, time-series of
+  group means and boxplots by group 
   
 2010-11-29 version 1.9.3
 - New estimation command "biprobit" (bivariate probit)
